# QTPetTrackerNew

./: CMakeLists.txt  add_event_dialog.cpp  add_event_dialog.h  edit_pet_dialog.cpp  edit_pet_dialog.h  event.cpp  event.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pet.cpp  pet.h  resources.qrc  styles.qss
.github/workflows/: build.yml
tests/: CMakeLists.txt  test_main.cpp
